"Implement resolution divider in the Blender Internal" plus Freestyle calls freestyle render over and over and over for each subdivided resolution #41457

Closed
opened 2014-08-16 08:32:53 +02:00 by J Kauth · 13 comments

Hello and thanks for the "resolution divider in blender internal" (Differentail #D609)... works great!

However, if you also turn on "Freestyle' render option and then turn on "rendered" preview in View3d, the freestyle renderer is called once for each lower resolution, which make preview unreasonably slow.

It is easy to reproduce with factory settings like this:

  1. start new factory startup file
  2. enable "Freestyle" button
  3. enable "Viewport Shading | Rendered"
  4. remove the default cube
  5. add a Suzanne.
  6. add a 3x subdivision surface modifier
  7. (try) to navigate in Viewport

It does work as "expected" but what it does is call freestyle renderer over and over.

For just the default cube freestyle is quick enough but complex scenes causes a
noticeable delay in navigating as the freestyle renderer is called multiple times.

I suggest that Freestyle is only called once after the highest resolution is complete.

Hello and thanks for the "resolution divider in blender internal" (Differentail #[D609](https://archive.blender.org/developer/D609))... works great! However, if you also turn on "Freestyle' render option and then turn on "rendered" preview in View3d, the freestyle renderer is called once for each lower resolution, which make preview unreasonably slow. It is easy to reproduce with factory settings like this: 1) start new factory startup file 2) enable "Freestyle" button 3) enable "Viewport Shading | Rendered" 4) remove the default cube 5) add a Suzanne. 6) add a 3x subdivision surface modifier 7) (try) to navigate in Viewport It does work as "expected" but what it does is call freestyle renderer over and over. For just the default cube freestyle is quick enough but complex scenes causes a noticeable delay in navigating as the freestyle renderer is called multiple times. I suggest that Freestyle is only called once after the highest resolution is complete.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @jakester488

Added subscriber: @jakester488

#41472 was marked as duplicate of this issue

#41472 was marked as duplicate of this issue

Added subscriber: @Druban

Added subscriber: @Druban

I was going to report this as a bug but didn't know what was causing it! but I can confirm the behavior - each 'blink' and redraw is quite slow for many edge scenes, making the viewport preview a real bottleneck.

I was going to report this as a bug but didn't know what was causing it! but I can confirm the behavior - each 'blink' and redraw is quite slow for many edge scenes, making the viewport preview a real bottleneck.
Sergey Sharybin was assigned by Bastien Montagne 2014-08-16 14:35:26 +02:00

Added subscriber: @mont29

Added subscriber: @mont29

Sergey, think it was you who implemented this for internal?

Sergey, think it was you who implemented this for internal?

Not sure, are you suggestion to do freestyle render for the final resolution only and skip it for the divided resolution for the speed?

Not sure, are you suggestion to do freestyle render for the final resolution only and skip it for the divided resolution for the speed?

Added subscriber: @cdog

Added subscriber: @cdog

◀ Merged tasks: #41472.

◀ Merged tasks: #41472.

This issue was referenced by 2184ac8c9d

This issue was referenced by 2184ac8c9d878cbf507437a08cc824eed536540b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 2184ac8c9d.

Closed by commit 2184ac8c9d.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41457
No description provided.