Fix T41457: Viewport resolution divider does freestyle for every resolution

Now freestyle would be rendered for the final resolution only, making it so
viewport navigation is really interactive.